# pdfcatch-detector

./: .gitignore  README.md  atualizar catálogo.example.json  pre-treino.py  pyproject.toml
Modules/detector/: README.md  __init__.py
Modules/detector/bytes/: README.md  __init__.py  prefilter.py  window_fingerprint.py
Modules/detector/image/: README.md  __init__.py  dhash.py
Modules/detector/stream/: README.md  __init__.py  contents.py  simhash64.py
Modules/detector/text/: README.md  __init__.py  metrics.py
Modules/detector/tlsh/: README.md  __init__.py
configs/: anchor_text_fields.example.json  run.env.example  templates.json
docs/: KMEANS_DEMONSTRACAO.md  KMEANS_ESQUEMA_VISUAL.md  KMEANS_MODO_CERTO_D.md  VALIDATED_BATCH_FLOW.md
lixeira/removido_pos_etapa7_20260305_012603/family/: catalog_registry.py  live.py  similarity_score.py
lixeira/removido_pos_etapa7_20260305_012603/ia/: catalog_registry.py  live.py  similarity_score.py
lixeira/reorg_family_non_ia_20260304_225440/: catalog_collect.py  elbow.py  similarity_search.py
src/pdfcatch/: __init__.py  api_server.py  bytes_features.py  cli.py  main.py
src/pdfcatch/catalogacao_classica/: __init__.py  build_catalog.py  compare_with_paradigm.py  find_docs.py
src/pdfcatch/core/: __init__.py  engine.py  model.py
src/pdfcatch/family/: __init__.py  ai_embed_covers.py  ai_embed_covers_extract_preview.py  ai_paradigm_validate.py  build_catalog.py  catalog_build.py  catalog_register.py  compare_with_paradigm.py  features.py  find_docs.py  live.py  (+2 more)
tools/: batch_detect.py  run_kmeans_detect_d.sh
(+35 files in other folders)
